# cmake_template

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: cxx_func.cmake
src/: CMakeLists.txt  hello.c
tests/: CMakeLists.txt  hello_again.c
